--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,6 @@ steps:
 
 - script: |
     npm install
-    npm run build
-  displayName: 'npm install and build'
+    npm build
+    npm serverstart
+  displayName: 'npm install, build and serverstart'
