Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
 - script: |
     npm install
     npm run build
-    npm audit fix
+    node -v
+    echo "everything OK!"
     npm run start
   displayName: 'npm install, build and start'
